policy/allowed-image.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: allowed-image-registries
spec:
  validationFailureAction: enforce
  rules:
    - name: only-allow-registered-registries
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Only images from ghcr.io/slsa-lab-blue are allowed."
        pattern:
          spec:
            containers:
              - image: "ghcr.io/slsa-lab-blue/*"
