policy/verify-image.yaml
# verify-image-signature.yaml

apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-signed-images
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: check-signature
      match:
        resources:
          kinds:
            - Pod
      verifyImages:
        - imageReferences:
            - "ghcr.io/slsa-lab-blue/*"
          required: true
          verifyDigest: true
          attestors:
            - entries:
                - keyless:
                    rekor:
                      url: https://rekor.sigstore.dev
                    issuer: "https://token.actions.githubusercontent.com"
                    subject: "https://github.com/slsa-lab-blue/application/.github/workflows/build-push.yaml@refs/heads/main"
